# Homework_14.Ratuev

./: README.md  pyproject.toml
data/: index.html  report_coverege.html
src/: category.py  exceptions.py  exp.py  lawngrass.py  main.py  mixinproduct.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_baseproduct.py  test_category.py  test_lawngrass.py  test_mixinproduct.py  test_product.py  test_smartphone.py
