[tool.poetry]
name = "homework-14-ratuev"
version = "0.1.0"
description = ""
authors = ["Evrat <Evratal@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_14"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
